[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threat-intel-mcp"
version = "0.1.0"
description = "Threat Intelligence Dashboard MCP Server - aggregates threat feeds, IOCs, and security intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Marc", email = "marc@example.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "feedparser>=6.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "redis>=5.0.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
threat-intel-mcp = "threat_intel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/threat_intel_mcp"]
